# synthetic-replication-games

./: .env  .gitattributes  .gitignore  Dockerfile  README.md  dedup.csv  dedup.xlsx  dedup_df.xlsx  df_transformation.py  docker-compose.yml  output_to_dta.py  p.ipynb  pyproject.toml  srg_20251216_team_5.csv  treatments.ipynb  treatments.xlsx
experiments/: EXPERIMENTS.md
experiments/publication/: experiment_prompt_template.xlsx  experiment_prompt_template_gptoss-120b.xlsx  experiment_prompt_template_llama3-3.xlsx  ~$experiment_prompt_template.xlsx
experiments/publication/experiment_results/: team_5_1_20251216T153125Z.csv  team_5_1_20251216T153125Z.json  team_5_1_20251216T180530Z.csv  team_5_1_20251216T180530Z.dta  team_5_1_20251216T180530Z.json  team_5_gptoss120b_1_20260113T104635Z.csv  team_5_gptoss120b_1_20260113T104635Z.dta  team_5_gptoss120b_1_20260113T104635Z.json  team_5_llama3-370b_1_20260113T114728Z.csv  team_5_llama3-370b_1_20260113T114728Z.dta  team_5_llama3-370b_1_20260113T114728Z.json
material/: comparison_plots.R  generate_plots.sh  rep_estimates.R  rep_estimates.do  rep_plots.r  repdata.csv  repdata.dta  repdata.tab
