[project]
name = "synthetic-replication-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "talkingtomachines>=0.2.7",
]

[[tool.uv.index]]
url = "https://test.pypi.org/simple/"

[[tool.uv.index]]
url = "https://pypi.org/simple"
