[project]
name = "synthetic-replication-games"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "talkingtomachines>=0.2.7",
]

[tool.uv.sources]
talkingtomachines = { git = "https://github.com/tobiasbohne-unibw/talking-to-machines", branch = "add-local-inference-endpoints" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
]
